syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.jjc.grpc.services";
option java_outer_classname = "UserService";

package user;

service User {
  rpc findById (FindUserRequest) returns (UserResponse) {}
}

message FindUserRequest {
  uint64 userId = 1;
}

message UserResponse {
  PublicUserAccount publicUser = 1;
}

message PublicUserAccount {
  uint64 userId = 1;
  string firstName = 2;
  string lastName = 3;
}
